# PayApp

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml
payapp/: forms.py  models.py  urls.py  views.py
payapp/migrations/: 0001_initial.py  0002_transaction.py  0003_alter_transaction_receiver_alter_transaction_sender.py  0004_rename_currency_transaction_from_currency_and_more.py  0005_remove_transaction_from_currency_and_more.py  0006_transaction_created_transaction_modified.py
payapp/templatetags/: payapp_extras.py
register/: forms.py  urls.py  views.py
static/: styles.css
templates/: base.html
templates/payapp/: accounts.html  history.html  home.html  request_payment.html  requests.html  send_payment.html  transactions.html
templates/register/: login_user.html  register_admin.html  register_user.html
webapps2023/: settings.py  urls.py
