[tool.poetry]
name = "webapps2023"
version = "1.0.0"
description = "A simplified version of PayPal."
authors = ["alimohdapg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
crispy-bootstrap5 = "0.7"
django = "4.1.7"
django-crispy-forms = "2.0"
asgiref = "3.6.0"
sqlparse = "0.4.3"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
